massive rework: WIP
